--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
         <input type="text" placeholder="Email or Username">
         <br>
         <input type="password" placeholder="Password">
-
+    </header>    
         <nav>
             <ul>
-                <li><a href="home.html">HOME</a></li>
-                <li><a href="following.html">FOLLOWING</a></li>
-                <li><a href="videos+.html">VIDEOS+</a></li>
-                <li><a href="profile.html">PROFILE</a></li>
+                <li><a href="/index.html">HOME</a></li>
+                <li><a href="/following.html">FOLLOWING</a></li>
+                <li><a href="/videos+.html">VIDEOS+</a></li>
+                <li><a href="/profile.html">PROFILE</a></li>
             </ul>
         </nav>
-    </header>
     
     <main>
         <section id="publicaciones">
